<resources>
    <string name="app_name">Monopoly</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="confirm">Confirm</string>
    <string name="manage">Manage</string>
    <string name="trade">Trade</string>
    <string name="sell">Sell</string>
    <string name="mortgage">Mortgage</string>
    <string name="hotel">HOTEL </string>
    <string name="buildings">Buildings: </string>
    <string name="roll_dices">Roll dices</string>
    <string name="cant_start">Can\'t start :(</string>
    <string name="not_enough_players">This game requires minimum 2 players!</string>
    <string name="insufficient_funds_title">Can\'t buy</string>
    <string name="insufficient_funds_msg">Insufficient funds!</string>
    <string name="for_sale">For sale! </string>
    <string name="foreign_land">Foreign land! </string>
    <string name="settings">Settings</string>
    <string name="statistic">Statistic</string>
    <string name="clear_stats">Clear Statistic</string>
    <string name="play">Play</string>
    <string name="string_player_cb">Player</string>
    <string name="string_ai_cb">Ai</string>
    <string name="string_off_cb">Off</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="back">Back</string>
    <string name="land_on_go">Land on GO Salary</string>
    <string name="pass_go_salary">Pass GO Salary:</string>
    <string name="initial_cash">Initial cash:</string>
    <string name="exit_game">Exit game?</string>
    <string name="game_over">Game over!</string>
    <string name="shake_sens">Shake sensitivity</string>
    <string name="transfer_fail_title">Sorry. Can\'t transfer!</string>
    <string name="transfer_fail_msg">This transfer isn\'t fair. Please select at least one card from both players.</string>
    <string name="exit_game_msg">Are you sure you want to leave the game?</string>

    <string name="community_chest_bank_error">Bank error in your favor. Collect $2000</string>
    <string name="community_chest_beauty">You have won second prize in a beauty contest. Collect $100</string>
    <string name="community_school_tax">Pay school tax of $150</string>
    <string name="community_income_tax">Income tax refund. Collect $200</string>
    <string name="community_consultancy">Receive $250 Consultancy fee.</string>
    <string name="community_hospital_tax">Hospital fees. Pay $1000</string>
    <string name="community_chest_title">Community Chest!</string>

    <string name="chance_jail">Go to jail directly. Do not collect $2000</string>
    <string name="chance_montreal">Advance to "Montreal".</string>
    <string name="chance_istanbul">Advance to "Istanbul".</string>
    <string name="chance_london">Advance to "London".</string>
    <string name="chance_back">Go back three spaces.</string>
    <string name="chance_start">Advance to "GO". Collect $2000</string>
    <string name="chance_title">Chance!</string>

    <string name="start">Start</string>
    <string name="gdynia">Gdynia</string>
    <string name="community_chest">Community Chest</string>
    <string name="taipei">Taipei</string>
    <string name="income_tax">Income Tax</string>
    <string name="rail">Monopoly Rail</string>
    <string name="tokyo">Tokyo</string>
    <string name="chance">Chance</string>
    <string name="barcelona">Barcelona</string>
    <string name="athens">Athens</string>
    <string name="jail_visit">Visiting Jail</string>


    <string name="istanbul">Istanbul</string>
    <string name="solar_energy">Solar Energy</string>
    <string name="kyiv">Kyiv</string>
    <string name="toronto">Toronto</string>
    <string name="air">Monopl Air</string>
    <string name="rome">Rome</string>
    <string name="shanghai">Shanghai</string>
    <string name="vancouver">Vancouver</string>
    <string name="parking">Free Parking</string>


    <string name="sydney">Sydney</string>
    <string name="new_york">New York</string>
    <string name="london">London</string>
    <string name="cruise">Monopoly Cruise</string>
    <string name="beijing">Beijing</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="wind_energy">Wind Energy</string>
    <string name="jerusalem">Jerusalem</string>


    <string name="jail_title">Prison time</string>
    <string name="jail">Go To Jail</string>
    <string name="paris">Paris</string>
    <string name="belgrade">Belgrade</string>
    <string name="cape_town">Cape Town</string>
    <string name="space">Monopoly Space</string>
    <string name="riga">Riga</string>
    <string name="super_tax">Super Tax</string>
    <string name="montreal">Montreal</string>

    <string-array name="initial_cash_options">
        <item>$15000</item>
        <item>$10000</item>
        <item>$20000</item>
    </string-array>

    <string-array name="land_salary_options">
        <item>Normal</item>
        <item>Double</item>
    </string-array>

    <string-array name="pass_salary_options">
        <item>$2000</item>
        <item>$4000</item>
    </string-array>
</resources>
