<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="160dp"
        android:src="@drawable/monopoly_logo"/>

    <Button
        android:id="@+id/button_play_game"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/play"/>

    <Button
        android:id="@+id/button_statistic"
        android:layout_marginTop="50dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/statistic"/>

    <Button
        android:id="@+id/button_settings"
        android:layout_marginTop="50dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"/>

</LinearLayout>
