<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="40dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/shake_sens"/>

            <SeekBar
                android:id="@+id/sensor_max"
                android:layout_width="0dp"
                android:layout_weight="3"

                android:layout_height="wrap_content"
                android:max="15"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/initial_cash"/>

        <Spinner
            android:id="@+id/settings_initial_cash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pass_go_salary"/>

        <Spinner
            android:id="@+id/settings_go_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/land_on_go"/>

        <Spinner
            android:id="@+id/settings_go_land"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settings_cancel"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/settings_accept"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"></Button>
    </LinearLayout>

</LinearLayout>
