<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CardsActivity">


    <TextView
        android:id="@+id/cards_frame_player_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/cards_frame_player"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        style="?android:listSeparatorTextViewStyle">

    </ListView>

    <Spinner
        android:id="@+id/cards_frame_opponent_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/cards_frame_opponent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        style="?android:listSeparatorTextViewStyle">

    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RadioGroup
            android:id="@+id/card_option_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="248dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

            <RadioButton
                android:id="@+id/card_option_manage_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/manage"/>

            <RadioButton
                android:id="@+id/card_option_trade_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trade"
                android:layout_marginTop="16dp"/>
        </RadioGroup>

        <Button
            android:id="@+id/card_confirm_button"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/confirm"/>
    </RelativeLayout>

</LinearLayout>
