<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_margin="10dp"
    tools:context=".PlayActivity">

    <LinearLayout
        android:layout_marginLeft="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:enabled="false"
            android:background="@color/red"/>

        <EditText
            android:id="@+id/name_player1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:selectAllOnFocus="false"
            android:text="Human 1"/>

        <RadioGroup
            android:id="@+id/radio_group_player1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/string_player_cb"/>

            <RadioButton
                android:id="@+id/radio_button_ai1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_ai_cb" />

            <RadioButton
                android:id="@+id/radio_button_off1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_off_cb" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:enabled="false"
            android:background="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/name_player2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Computer 2"
            android:enabled="false"/>

        <RadioGroup
            android:id="@+id/radio_group_player2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_player_cb"/>

            <RadioButton
                android:id="@+id/radio_button_ai2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/string_ai_cb" />

            <RadioButton
                android:id="@+id/radio_button_off2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_off_cb" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:enabled="false"
            android:background="@color/green"/>

        <EditText
            android:id="@+id/name_player3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"/>

        <RadioGroup
            android:id="@+id/radio_group_player3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_player3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_player_cb"/>

            <RadioButton
                android:id="@+id/radio_button_ai3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_ai_cb" />

            <RadioButton
                android:id="@+id/radio_button_off3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/string_off_cb" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:enabled="false"
            android:background="@color/yellow"/>

        <EditText
            android:id="@+id/name_player4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"/>

        <RadioGroup
            android:id="@+id/radio_group_player4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_player4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_player_cb"/>

            <RadioButton
                android:id="@+id/radio_button_ai4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_ai_cb" />

            <RadioButton
                android:id="@+id/radio_button_off4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/string_off_cb" />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_cancel_game"
            android:layout_marginTop="50dp"
            android:layout_marginRight="24dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/arrow_left"
            android:text="@string/back"/>

        <Button
            android:id="@+id/button_start_game"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="24dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/play"/>

    </LinearLayout>

</LinearLayout>
